# FLIMari

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: index.md
docs/api/: napari.md  widgets.md
docs/user-guide/: tutorials.md
flimari/core/napari/: layer_manager.py
flimari/core/widgets/: auto_spin_box.py  color_button.py  indicator.py  mpl_graph.py  themed_button.py
flimari/plugins/phasor/core/: __init__.py  calibration.py  dataset.py
flimari/plugins/phasor/ml/: __init__.py  embed.py  feature_workspace.py  utils.py
flimari/plugins/phasor/ui/: calibration_widget.py  phasor_plot_control.py  phasor_plot_graph.py  sample_manager_widget.py  summary_widget.py  umap_widget.py
