[project]
name = "flimari"
version = "0.1.0"
description = "FLIMari"
authors = [
	{name="Guangchen Wang", email="wangg4@tcd.ie"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"numpy",
	"tifffile",
	"ptufile",
	"scipy",
	"napari",
	"qtpy",
	"phasorpy>=0.6"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization"
]

[project.entry-points."napari.manifest"]
"flimari" = "flimari:napari.yaml"

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov"
]

[tool.pytest.ini_options]
adopts = "-ra -q"
python_files = "test_*.py"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["flimari*"]

[tool.setuptools.package-data]
flimari = ["napari.yaml", "**/*.yaml", "**/*.yml"]